--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,19 +26,19 @@ nav{
 }
 
 #synopsisSection{
-    background-color: red;
+    background-color: rgba(0, 181, 255, .3);
+    padding:10px;
+    margin-top:10px;
+    margin-bottom:10px;    
+    border-radius:10px; 
 }
 
 #authorSection{
-    background-color: purple;
-}
-
-#authorNote{
-    background-color:yellow;
-}
-
-#authorBio{
-    background-color: white;
+    background-color: rgba(178, 170, 9, 0.3);
+    padding:10px;
+    margin-top:10px;
+    margin-bottom:10px;
+    border-radius:10px
 }
 
 #linksSection{
@@ -53,4 +53,44 @@ nav{
 
 .backPic{
     background-image: url("../images/bckgd.jpg");
+}
+
+#tagBlurb{
+    background-color: rgba(235, 232, 235, 0.7);
+    padding:10px;
+    margin-top:10px;
+    margin-bottom:10px;
+    border-radius:10px;
+}
+.modalBlurb{
+    background-color: rgba(235, 232, 235, 0.3);
+    padding:10px;
+    margin:10px;
+    border-radius:10px; 
+}
+p{
+    font-family: 'Barlow', sans-serif;   
+    font-size:20px; 
+}
+span{
+    font-size:20px;     
+    font-family: 'Barlow', sans-serif; 
+    color:black;    
+}
+a:link{
+    text-decoration: none;
+    color:black;
+    
+}
+a:visited{
+    text-decoration:none;
+    color:black;
+}
+a:hover{
+    text-decoration: none;
+    color:black;
+    cursor: pointer;
+}
+a{
+    color:black;    
 }
