fixed font for li

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,3 +94,8 @@ a:hover{
 a{
     color:black;    
 }
+li{
+    font-size:20px;     
+    font-family: 'Barlow', sans-serif; 
+    color:black; 
+}
